tests/ui/errors/snapshots/infer_invalid_cast_rune_to_custom_byte.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid conversion
   ╭─[test.lis:6:3]
 5 │   let r: rune = 'A';
 6 │   r as MyByte
   ·   ─────┬─────
   ·        ╰── cannot convert `rune` to `MyByte`
 7 │ }
   ╰────
  help: rune (int32) is wider than byte (uint8) and may not fit. Use an intermediate variable to convert via int first: `let n = r as int; n as byte` · code: [infer.invalid_conversion]
