tests/ui/errors/snapshots/infer_invalid_cast_string_to_byte.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid conversion
   ╭─[test.lis:3:3]
 2 │ fn test() -> byte {
 3 │   "A" as byte
   ·   ─────┬─────
   ·        ╰── cannot convert `string` to `byte`
 4 │ }
   ╰────
  help: Strings cannot be converted to numbers and require explicit parsing. Use `strconv.Atoi()` to parse · code: [infer.invalid_conversion]
