tests/ui/errors/snapshots/infer_invalid_cast_string_to_int.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid conversion
   ╭─[test.lis:3:3]
 2 │ fn test() -> int {
 3 │   "42" as int
   ·   ─────┬─────
   ·        ╰── cannot convert `string` to `int`
 4 │ }
   ╰────
  help: Strings cannot be converted to numbers and require explicit parsing. Use `strconv.Atoi()` to parse · code: [infer.invalid_conversion]
