tests/ui/errors/snapshots/infer_invalid_cast_string_to_rune.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid conversion
   ╭─[test.lis:3:3]
 2 │ fn test() -> rune {
 3 │   "A" as rune
   ·   ─────┬─────
   ·        ╰── cannot convert `string` to `rune`
 4 │ }
   ╰────
  help: Strings cannot be converted to numbers and require explicit parsing. Use `strconv.Atoi()` to parse · code: [infer.invalid_conversion]
