tests/ui/errors/snapshots/infer_invalid_cast_struct_to_int.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid conversion
   ╭─[test.lis:6:3]
 5 │   let s = MyStruct { x: 1 };
 6 │   s as int
   ·   ────┬───
   ·       ╰── cannot convert `MyStruct` to `int`
 7 │ }
   ╰────
  help: Conversions are supported between numeric types, between string and byte/rune slices, from rune to string, and from concrete types to interfaces · code: [infer.invalid_conversion]
