tests/ui/errors/snapshots/infer_invalid_remainder_by_numeric_alias.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[main.lis:6:11]
 5 │   let n: int = 100;
 6 │   let x = n % time.Second;
   ·           ───────┬───────
   ·                  ╰── cannot compute `int` with `Duration`
 7 │ }
   ╰────
  help: Convert with `as`, e.g. `value as Duration` · code: [infer.type_mismatch]
