tests/ui/errors/snapshots/infer_irrefutable_while_let_or_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Pattern always matches
   ╭─[test.lis:3:13]
 2 │ fn test(opt: Option<int>) {
 3 │   while let Some(_) | None = opt {
   ·             ───────┬──────
   ·                    ╰── matches every value, so the loop never ends
 4 │     break;
   ╰────
  help: Use `loop` with `let` binding instead · code: [infer.irrefutable_while_let]
