tests/ui/errors/snapshots/infer_json_marshal_method_override.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reserved JSON method
   ╭─[test.lis:8:6]
 7 │ impl Status {
 8 │   fn MarshalJSON(self) -> int {
   ·      ─────┬─────
   ·           ╰── `MarshalJSON` collides with the method generated by `#[json]`
 9 │     1
   ╰────
  help: `#[json]` already generates `MarshalJSON` and `UnmarshalJSON`. Remove this method, or drop `#[json]` and write both yourself · code: [infer.json_method_override]
